Fix: scrollbar area

--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@
     position: absolute;
     top: 0;
     left: 0;
-    height: 100vh;
+    height: 100%;
     width: 100%;
     z-index: 100;
     pointer-events: none;
